--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 <li>มีทางเลือกอื่นหรือไม่?
 <li>สิ่งที่จำเป็นต้องดำเนินการทันทีในขณะนี้
 </p></ul>
+	 
+<span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<img src="covid-deaths-8-may-21.jpg" style="width:300px; ">
+<p>
+<b>
+</p>
+</span>
 <p>
 หลักการนูเรมเบิร์กมีข้อห้ามที่ชัดเจน คือ ห้ามการทดลองทางการแพทย์กับผู้คนโดยไม่ได้รับความยินยอมจากพวกเขา และความเสี่ยงไม่ควรมาก่อนผลดีที่ผู้คนจะได้รับ
 <br>
