--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <link media="screen" href="stylesheet.css" rel="stylesheet" type="text/css" />
   </head>
  <body>
+	 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<a href="index.html"><img src="thaiflag.jpg" style="width:70px; "></a>
+<a href="eng.html"><img src="ukflag.jpg" style="width:90px; "></a>
+</span>
+
+          <!-- ============================== Start Page Break ============================================================== -->
+     <img src="2x1.jpg" width="100%" height="1px">
+      <!-- ============================== End Page Break ============================== -->
 <h1>
 โปรดแบ่งปันข้อมูลสำคัญนี้กับทุกคนที่คุณรัก ข้อมูลนี้จะช่วยชีวิตพวกเขาได้!</h1>
 <p><b>เรื่อง</b></p>
