--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 <li>ข้อมูลที่สำคัญเกี่ยวกับผลข้างเคียงที่ควรทราบ และการเสียชีวิตของคนจำนวนมากถูกระงับไว้โดยเจตนาจากประชาชนที่ต้องการรับการฉีดวัคซีน
 <li>ผู้คนตระหนักดีว่าพวกเขากำลังอยู่ในการทดลองทางคลินิกและต้องให้ความยินยอมเป็นลายลักษณ์อักษรและมีข้อมูลครบถ้วนเพื่อเข้าร่วมการทดลองดังกล่าวหรือไม่?
 </p></ul>
+	 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<img src="astrazeneca.jpg" style="width:300px; ">
+Astra Zeneca 'vaxx' injury!
+</span>
+	 
 <p>
 แม้แต่ไฟเซอร์ก็มีคำเตือนที่ร้ายแรงเกี่ยวกับผลข้างเคียงเกี่ยวกับการฉีดยา แต่จะซ่อนอยู่ในมุมเล็กๆของข่าวเท่านั้น
 <br>
