--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </p></ul>
 	 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <img src="astrazeneca.jpg" style="width:300px; ">
-Astra Zeneca 'vaxx' injury!
+Astra Zeneca การบาดเจ็บจากวัคซีน!
 </span>
 	 
 <p>
