--- a/eng.html
+++ b/eng.html
@@ -134,6 +134,16 @@ The UK Government’s on SAGE is predicting a ‘third wave’ where 60 -70% of 
 (Of course viruses don’t do ‘waves’ as is now continuously claimed. It is simply a way to perpetuate the ‘pandemic’ to scare and force everyone into being injected.
 Also all the deaths caused by the injections are being blamed by these new ‘waves’ and ‘mutations’, which is plainly nonsensical and any honest virologist will tell you so!)
 <br><br>
+	 
+	 </p>
+<span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<img src="vaxx-killed-cats.jpg" style="width:300px; ">
+<p>
+All cats died after encountering a subsequent virus!
+Just what's predicted for all injected human Guinea Pigs!
+</p></span>
+<p>
+	 
 If such a huge percentage of injected people is expected to die or experience severe health effects from these injections, then why are governments continue to insist on forcing these injections on their populations by fear-mongering and coercion?
 <br><br>
 The mRNA etc type injections which re-program the body to manufacture a Spike Protein are causing severe damage to the blood vessels and people die from the damage these Spike Proteins are causing to the Endothelium and the entire body of injected people. 
