--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <img src="covid-deaths-8-may-21.jpg" style="width:300px; ">
 <p>
-<b>
+การเสียชีวิตอย่างเป็นทางการจากวัคซีนโควิด-19 สำหรับสหภาพยุโรปเท่านั้น
+	<br>
+	พฤษภาคม 2564 
 </p>
 </span>
 <p>
