--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@ Astra Zeneca การบาดเจ็บจากวัคซีน!
 <br>
 แท้จริงแล้วพวกสารพิษที่เรียกว่าวัคซีนครั้งนี้จึงไม่มีประโยชน์ และไม่จำเป็น จึงเกิดคำถาทขึ้นว่าแท้จริงแล้วพวกเขาผลิตมาไว้เพื่ออะไร?
 <br>
+	
+	<span style="float: right; width: 179px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<iframe src="https://brandnewtube.com/embed/KgMg418SIL51YES" frameborder="0" width="175" height="100" allowfullscreen></iframe>
+รายงานการบาดเจ็บจากวัคซีนในกลุ่มชายรักชาย!
+</span>
+
+	
 ♦ คำถามนี้ได้รับคำตอบอย่างต่อเนื่อง เนื่องจากมีหลักฐานเพิ่มเติมเกี่ยวกับผลกระทบในการฉีดสารเหล่านี้ต่อผู้คน
 <br>
 นอกเหนือจากการเสียชีวิตจำนวนมากแล้ว ผลข้างเคียงที่ไม่พึงประสงค์ยังพบในผุ้คนหลายแสนคน
