--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@ Astra Zeneca การบาดเจ็บจากวัคซีน!
 แท้จริงแล้วพวกสารพิษที่เรียกว่าวัคซีนครั้งนี้จึงไม่มีประโยชน์ และไม่จำเป็น จึงเกิดคำถาทขึ้นว่าแท้จริงแล้วพวกเขาผลิตมาไว้เพื่ออะไร?
 <br>
 	
-	<span style="float: right; width: 179px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<span style="float: right; width: 179px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/KgMg418SIL51YES" frameborder="0" width="175" height="100" allowfullscreen></iframe>
+Vaccine injury reported on MSM!
 รายงานการบาดเจ็บจากวัคซีนในกลุ่มชายรักชาย!
 </span>
 
