--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@ Astra Zeneca การบาดเจ็บจากวัคซีน!
 <br>
 	
 	<span style="float: right; width: 179px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
-<iframe src="https://brandnewtube.com/embed/KgMg418SIL51YES" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-รายงานการบาดเจ็บจากวัคซีนในกลุ่มชายรักชาย!
+<iframe src="https://brandnewtube.com/embed/KgMg418SIL51YES" frameborder="0" width="175" height="100" allowfullscreen></iframe>รายงานการบาดเจ็บจากวัคซีนในกลุ่มชายรักชาย!
 </span>
 
 	
