--- a/eng.html
+++ b/eng.html
@@ -214,32 +214,59 @@ Masks, lockdowns, curfews, business shutdowns, travel restrictions etc; <br><b>a
 <li>End this<b> biggest crime against Humanity in history now!</b>
 </p></ul>
 
+	        <!-- ============================== Start Page Break ============================== -->
+     <img src="2x1.jpg" width="100%" height="1px">
+      <!-- ============================== End Page Break ============================== -->
+<span style="float: left; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 50px; text-align: left;"> 
+<img src="india-1.jpg" style="width:300px; ">
+<p>75% of all Deaths are officially attributed to be caused by the injections!</p>
+</span>
+<span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<img src="india-2.jpg" style="width:300px; ">
+<p>The statistics are clear what is driving the planned Genocide!</p>
+</span>
 
+<span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<img src="covid-india-ivermectin.png" style="width:300px; ">
+<p>Ivermectin reduced the deaths rapidly while the injections causes all the new deaths!</p>
+</span>
+	        <!-- ============================== Start Page Break ============================== -->
+     <img src="2x1.jpg" width="100%" height="1px">
+      <!-- ============================== End Page Break ============================== -->
+
+<!-- ++++++++++++++++++++++++++++++++ ++++++++++++++++++++++++++ -->
+<table>
+<tr  style="overflow:auto">
+
+<td style="width: 180px; vertical-align:top">
 
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;">
 <iframe src="https://brandnewtube.com/embed/loR7dirywg1993R" frameborder="0" width="175" height="100" allowfullscreen></iframe>
 <p>Dr. Vernon Coleman<br>
 Why and How They Plan to Kill Seven Billion
-</p></span>
+</p></span></td>
 
+<td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/JmPw8cUxQG1w7NP" frameborder="0" width="175" height="100" allowfullscreen></iframe>
 <p>Dr. Vernon Coleman<br>
 Final, Irrefutable Proof that the Covid-19 Pandemic Never Existed
-</p></span>
+</p></span></td>
 
+<td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/fPUfTMSbE6fvrHb" frameborder="0" width="175" height="100" allowfullscreen></iframe>
 <p>
 Professor Dr. Dolores Cahill and Dr Zac Cox
-</p></span>
+</p></span></td>
 
+<td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/76KIkDPkG9mJgEA" frameborder="0" width="175" height="100" allowfullscreen></iframe>
 <p>Dr. Judy Mikovits EXPOSES The Virus!
-</p></span>
+</p></span></td>
+</tr>
 
-<table>
 <tr  style="overflow:auto">
 
 <td style="width: 180px; vertical-align:top">
@@ -314,7 +341,7 @@ URGENT!! 5 DOCTORS AGREE THAT COVID-19 INJECTIONS ARE BIOWEAPONS AND DISCUSS WHA
 
 
 
-<br><br><br><br>
+
 <!-- +++++++++++++++++++++++++++++++++++++   +++++++++++++++++++++++++++++++++++++ -->
 
 <h1>
