--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <title>SARS-CoV-2</title>
         <link media="screen" href="stylesheet.css" rel="stylesheet" type="text/css" />
+        <style>
+          span {font-size-adjust: 1;}
+       </style>
   </head>
  <body>
 	 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
