--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link media="screen" href="stylesheet.css" rel="stylesheet" type="text/css" />
         <style>
           span {font-size-adjust: 1;}
+	span	{text-size-adjust: none;
+		-webkit-text-size-adjust: none;}
        </style>
   </head>
  <body>
