--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ Dr Michael Yeadon<br>
 <li>ยุติข้อ จำกัด ที่ยุ่งยากไม่จำเป็นและต่อต้านทั้งหมด
 </p></ul>
 <p><b>
-ยุติการปิดกั้น ยุติเคอร์ฟิว ยุติการปิดกิจการ ยุติ7:42 am 15/05/2021การจำกัดการเดินทาง และอื่นๆ
+ยุติการปิดกั้น ยุติเคอร์ฟิว ยุติการปิดกิจการ การจำกัดการเดินทาง และอื่นๆ
 <br><br>
 ยุติอาชญากรรมต่อมนุษยชาติครั้งใหญ่ที่สุดในประวัติศาสตร์นับจากบัดนี้!
 </p></b>
