--- a/eng.html
+++ b/eng.html
@@ -31,11 +31,10 @@ Re:
 
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <img src="covid-deaths-8-may-21.jpg" style="width:300px; ">
-<p>
+
 <b>EU only!</b><br>
 Official Deaths reported as of May 2021 from Covid-19 'vaccines'!
 
-</p>
 </span>
 
 <p>
@@ -138,10 +137,10 @@ Also all the deaths caused by the injections are being blamed by these new ‘wa
 	 </p>
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <img src="vaxx-killed-cats.jpg" style="width:300px; ">
-<p>
+
 All cats died after encountering a subsequent virus!
 Just what's predicted for all injected human Guinea Pigs!
-</p></span>
+</span>
 <p>
 	 
 If such a huge percentage of injected people is expected to die or experience severe health effects from these injections, then why are governments continue to insist on forcing these injections on their populations by fear-mongering and coercion?
@@ -219,16 +218,16 @@ Masks, lockdowns, curfews, business shutdowns, travel restrictions etc; <br><b>a
       <!-- ============================== End Page Break ============================== -->
 <span style="float: left; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 50px; text-align: left;"> 
 <img src="india-1.jpg" style="width:300px; ">
-<p>75% of all Deaths are officially attributed to be caused by the injections!</p>
+75% of all Deaths are officially attributed to be caused by the injections!
 </span>
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <img src="india-2.jpg" style="width:300px; ">
-<p>The statistics are clear what is driving the planned Genocide!</p>
+The statistics are clear what is driving the planned Genocide!
 </span>
 
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <img src="covid-india-ivermectin.png" style="width:300px; ">
-<p>Ivermectin reduced the deaths rapidly while the injections causes all the new deaths!</p>
+Ivermectin reduced the deaths rapidly while the injections causes all the new deaths!
 </span>
 	        <!-- ============================== Start Page Break ============================== -->
      <img src="2x1.jpg" width="100%" height="1px">
@@ -242,29 +241,29 @@ Masks, lockdowns, curfews, business shutdowns, travel restrictions etc; <br><b>a
 
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;">
 <iframe src="https://brandnewtube.com/embed/loR7dirywg1993R" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Dr. Vernon Coleman<br>
+Dr. Vernon Coleman<br>
 Why and How They Plan to Kill Seven Billion
-</p></span></td>
+</span></td>
 
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/JmPw8cUxQG1w7NP" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Dr. Vernon Coleman<br>
+Dr. Vernon Coleman<br>
 Final, Irrefutable Proof that the Covid-19 Pandemic Never Existed
-</p></span></td>
+</span></td>
 
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/fPUfTMSbE6fvrHb" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>
+
 Professor Dr. Dolores Cahill and Dr Zac Cox
-</p></span></td>
+</span></td>
 
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/76KIkDPkG9mJgEA" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Dr. Judy Mikovits EXPOSES The Virus!
-</p></span></td>
+Dr. Judy Mikovits EXPOSES The Virus!
+</span></td>
 </tr>
 
 <tr  style="overflow:auto">
@@ -272,8 +271,8 @@ Professor Dr. Dolores Cahill and Dr Zac Cox
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/GMc7IBzvZXzWJLE" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Dr. Reiner Fuellmich: <br>WE NEED A NUREMBERG 2.0! 
-</p></span>
+Dr. Reiner Fuellmich: <br>WE NEED A NUREMBERG 2.0! 
+</span>
 </td>
 
 
@@ -281,8 +280,8 @@ Professor Dr. Dolores Cahill and Dr Zac Cox
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/tmaGjbbTmBArcrk" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Dr. Reiner Fuellmich<br>Evidence That The Pandemic (#plandemic) is a Crime against Humanity
-</p></span>
+Dr. Reiner Fuellmich<br>Evidence That The Pandemic (#plandemic) is a Crime against Humanity
+</span>
 </td>
 
 
@@ -290,16 +289,16 @@ Professor Dr. Dolores Cahill and Dr Zac Cox
 
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;">
 <iframe src="https://brandnewtube.com/embed/loR7dirywg1993R" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Dr. Vernon Coleman<br>
+Dr. Vernon Coleman<br>
 Why and <b>How They Plan to Kill Seven Billion</b>
-</p></span>
+</span>
 </td>
 
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/WRAKrb29xavjVYq" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Dr. Carrie Madej<br>MANKIND IS IN DANGER
-</p></span>
+Dr. Carrie Madej<br>MANKIND IS IN DANGER
+</span>
 </td>
 </tr>
 
@@ -309,32 +308,32 @@ Why and <b>How They Plan to Kill Seven Billion</b>
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/vbWzkuVxdnUsNpX" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Professor Dolores Cahill | C-19, mRNA Therapies and Risks</p>
+Professor Dolores Cahill | C-19, mRNA Therapies and Risks
 </span>
 </td>
 
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe src="https://brandnewtube.com/embed/ZbK9RXHXlZoKJta" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Ex Pfizer Dr Mike Yeadon<br>The PCR Test is a total Fraud<br>Masks are dangerous and useless!
-</p></span>
+Ex Pfizer Dr Mike Yeadon<br>The PCR Test is a total Fraud<br>Masks are dangerous and useless!
+</span>
 </td>
 
 
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;">
 <iframe src="https://brandnewtube.com/embed/GwwmcZLSnEDQhqQ" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>
+
 URGENT!! 5 DOCTORS AGREE THAT COVID-19 INJECTIONS ARE BIOWEAPONS AND DISCUSS WHAT TO DO ABOUT IT
-</p>
+
 </span>
 </td>
 
 <td style="width: 180px; vertical-align:top">
 <span style="float: left; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;">
 <iframe src="https://brandnewtube.com/embed/gkwPJr6JXQSjMYQ" frameborder="0" width="175" height="100" allowfullscreen></iframe>
-<p>Epic Deception Being Exposed | James Corbett on lauralynn.tv
-</p>
+Epic Deception Being Exposed | James Corbett on lauralynn.tv
+
 </span>
 
  </td></tr></table>
