--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <link media="screen" href="stylesheet.css" rel="stylesheet" type="text/css" />
   </head>
  <body>
+	 <span style="float: left; width: 560px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<b>♥♥♥ ด่วน ♥♥♥</b><br>
+โปรดดาวน์โหลด <b><a href="letter.docx">จดหมาย</a></b> ฉบับนี้และส่งถึงนายกรัฐมนตรีและขอให้เพื่อน ๆ ทุกคนช่วยส่งด้วย
+<br>
+• ได้ฟรีไม่ต้องส่งไปรษณีย์! </span>
 	 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <a href="index.html"><img src="thaiflag.jpg" style="width:70px; "></a>
 <a href="eng.html"><img src="ukflag.jpg" style="width:90px; "></a>
@@ -14,8 +19,13 @@
           <!-- ============================== Start Page Break ============================================================== -->
      <img src="2x1.jpg" width="100%" height="1px">
       <!-- ============================== End Page Break ============================== -->
+<table>
+<tr>
+<td class="a" bgcolor="#f0f0f0" style="padding:10px">
 <h1>
 โปรดแบ่งปันข้อมูลสำคัญนี้กับทุกคนที่คุณรัก ข้อมูลนี้จะช่วยชีวิตพวกเขาได้!</h1>
+</td></tr></table>
+          <!-- ============================== Start **** ============================================================== -->
 <p><b>เรื่อง</b></p>
 <ul><p>
 <li>การฉีด SARS-CoV-2 (วัคซีนป้องกันโควิด 19)
