--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
  <body>
 	 <span style="float: left; width: 560px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <b>♥♥♥ ด่วน ♥♥♥</b><br>
-โปรดดาวน์โหลด <b><a href="letter.docx">จดหมาย</a></b> ฉบับนี้และส่งถึงนายกรัฐมนตรีและขอให้เพื่อน ๆ ทุกคนช่วยส่งด้วย
+โปรดดาวน์โหลด <b><a href="letter.docx">💌จดหมาย💌</a></b> ฉบับนี้และส่งถึงนายกรัฐมนตรีและขอให้เพื่อน ๆ ทุกคนช่วยส่งด้วย
 <br>
-• ได้ฟรีไม่ต้องส่งไปรษณีย์! </span>
+• ได้ฟรีไม่ต้องส่งไปรษณีย์! &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="letter.html"> <b>♦ เวอร์ชันเว็บที่นี่</b></a>
+</span>
+
 	 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <a href="index.html"><img src="thaiflag.jpg" style="width:70px; "></a>
 <a href="eng.html"><img src="ukflag.jpg" style="width:90px; "></a>
