--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <b>♥♥♥ ด่วน ♥♥♥</b><br>
 โปรดดาวน์โหลด <b><a href="letter.docx">💌จดหมาย💌</a></b> ฉบับนี้และส่งถึงนายกรัฐมนตรีและขอให้เพื่อน ๆ ทุกคนช่วยส่งด้วย
 <br>
-• ได้ฟรีไม่ต้องส่งไปรษณีย์! &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="letter.html"> <b>♦ เวอร์ชันเว็บที่นี่</b></a>
+• ได้ฟรีไม่ต้องส่งไปรษณีย์! &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="letter.html"> <b><p5>♦</p5> เวอร์ชันเว็บที่นี่ <p5>‼</p5></b></a>
 </span>
 
 	 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
