--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
  <body>
 	 <span style="float: left; width: 560px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 <b>♥♥♥ ด่วน ♥♥♥</b><br>
-โปรดดาวน์โหลด <b><a href="letter.docx">💌จดหมาย💌</a></b> ฉบับนี้และส่งถึงนายกรัฐมนตรีและขอให้เพื่อน ๆ ทุกคนช่วยส่งด้วย
+โปรดดาวน์โหลด <b><a href="letter.docx">💌(คลิก) จดหมาย💌</a></b>และปริ๊นต์ออกมา แล้วช่วยกันส่งถึงท่านนายกรัฐมนตรี และขอให้เพื่อน ๆ ทุกคนช่วยส่งต่อ เพื่อใช้วิจารณญานในการพิจารณาร่วมกัน
 <br>
-• ได้ฟรีไม่ต้องส่งไปรษณีย์! &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="letter.html"> <b><p5>♦</p5> เวอร์ชันเว็บที่นี่ <p5>‼</p5></b></a>
+• สามารถส่งฟรีไม่ต้องติดแสตมป์ หย่อนที่ตู้ไปรษณีย์ที่ไหนก็ได้! &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="letter.html"> 
+<br>
+<b><p5>♦</p5>คลิก เวอร์ชันเว็บที่นี่ <p5>‼</p5></b></a>
 </span>
 
 	 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
