--- a/index.html
+++ b/index.html
@@ -39,14 +39,29 @@
 <li>สิ่งที่จำเป็นต้องดำเนินการทันทีในขณะนี้
 </p></ul>
 	 
+<!-- ++++++++++++++++++++++++++++ Start Death Statistics ++++++++++++++++++++++ -->
+
+	</p>
+	<span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;">
+<a href="lethal-vaxx-may.jpg"><img class="z"   src="lethal-vaxx-may.jpg" style="width:300px; "></a>
+12,274 การเสียชีวิตอย่างเป็นทางการจากวัคซีนโควิด-19 สำหรับสหภาพยุโรปเท่านั้น
+22 พฤษภาคม 2564
+<br>
+♦ แต่มีผู้ป่วยเพียงไม่กี่รายเท่านั้นที่เข้าสู่สถิตินี้ !
+</span>
+<p>
+<!--	 
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
-<img src="covid-deaths-8-may-21.jpg" style="width:300px; ">
+<img  class="z" src="covid-deaths-8-may-21.jpg" style="width:300px; ">
 
 การเสียชีวิตอย่างเป็นทางการจากวัคซีนโควิด-19 สำหรับสหภาพยุโรปเท่านั้น
 	<br>
-	พฤษภาคม 2564 
+	22 พฤษภาคม 2564 
 
 </span>
+<p>
+-->
+<!-- ++++++++++++++++++++++++++++ End Death Statistics ++++++++++++++++++++++ -->
 <p>
 หลักการนูเรมเบิร์กมีข้อห้ามที่ชัดเจน คือ ห้ามการทดลองทางการแพทย์กับผู้คนโดยไม่ได้รับความยินยอมจากพวกเขา และความเสี่ยงไม่ควรมาก่อนผลดีที่ผู้คนจะได้รับ
 <br>
