--- a/eng.html
+++ b/eng.html
@@ -30,10 +30,12 @@ Re:
 </p></ul>
 
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
-<img src="covid-deaths-8-may-21.jpg" style="width:300px; ">
+<img src="lethal-vaxx-may.jpg" style="width:300px; ">
 
 <b>EU only!</b><br>
 Official Deaths reported as of May 2021 from Covid-19 'vaccines'!
+	<br>
+	Note that a study found that <b>only 1%</b> of cases end up in these Stats!
 
 </span>
 
