--- a/eng.html
+++ b/eng.html
@@ -29,14 +29,13 @@ Re:
 <li>What immediate actions are required now
 </p></ul>
 
-<span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
-<img src="lethal-vaxx-may.jpg" style="width:300px; ">
+<span style="float: right; width: 400px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+	<a href="lethal-vaxx-may.jpg"><img class="z" src="lethal-vaxx-may.jpg" style="width:400px; "></a>
 
 <b>EU only!</b><br>
 Official Deaths reported as of May 2021 from Covid-19 'vaccines'!
 	<br>
-	Note that a study found that <b>only 1%</b> of cases end up in these Stats!
-
+	But Studies showed that <b>only 1%</b> of cases get recorded!!
 </span>
 
 <p>
