--- a/eng.html
+++ b/eng.html
@@ -137,7 +137,7 @@ Also all the deaths caused by the injections are being blamed by these new ‘wa
 	 
 	 </p>
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
-<img src="vaxx-killed-cats.jpg" style="width:300px; ">
+<a href="vaxx-killed-cats.jpg"><img class="z" src="vaxx-killed-cats.jpg" style="width:300px; "></a>
 
 All cats died after encountering a subsequent virus!
 Just what's predicted for all injected human Guinea Pigs!
@@ -218,16 +218,16 @@ Masks, lockdowns, curfews, business shutdowns, travel restrictions etc; <br><b>a
      <img src="2x1.jpg" width="100%" height="1px">
       <!-- ============================== End Page Break ============================== -->
 <span style="float: left; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 50px; text-align: left;"> 
-<img src="india-1.jpg" style="width:300px; ">
+<a href="india-1.jpg"><img class="z" src="india-1.jpg" style="width:300px; "></a>
 75% of all Deaths are officially attributed to be caused by the injections!
 </span>
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
-<img src="india-2.jpg" style="width:300px; ">
+<a href="india-2.jpg"><img class="z" src="india-2.jpg" style="width:300px; "></a>
 The statistics are clear what is driving the planned Genocide!
 </span>
 
 <span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
-<img src="covid-india-ivermectin.png" style="width:300px; ">
+<a href="covid-india-ivermectin.png"><img class="z" src="covid-india-ivermectin.png" style="width:300px; "></a>
 Ivermectin reduced the deaths rapidly while the injections causes all the new deaths!
 </span>
 	        <!-- ============================== Start Page Break ============================== -->
