--- a/index.html
+++ b/index.html
@@ -141,6 +141,20 @@ SAGE ของรัฐบาลสหราชอาณาจักรคาด
 (แน่นอนว่าไวรัสไม่ได้ทำให้เกิด "คลื่น" ที่ว่ากันว่าเกิดแล้วเกิดอีกอย่างที่มีการกล่าวอ้างอย่างต่อเนื่อง มันเป็นเพียงวิธีที่จะทำให้เกิดการแพร่ระบาดอย่างต่อเนื่องเพื่อสร้างความหวาดกลัว และบังคับให้ทุกคนเร่งรีบที่จะรับการฉีด
 นอกจากนี้การเสียชีวิตทั้งหมดที่เกิดจากการฉีดสารนี้ยังถูกกล่าวอ้างถึง "คลื่น" และ "การกลายพันธุ์" ใหม่เหล่านี้ ซึ่งเป็นเรื่องไร้สาระอย่างชัดเจน บรรดานักไวรัสวิทยาที่ซื่อสัตย์จะบอกคุณเช่นนั้น!)
 <br><br>
+	
+		 </p>
+<span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<a href="vaxx-killed-cats.jpg"><img class="z" src="vaxx-killed-cats.jpg" style="width:300px; "></a>
+แมวทุกตัวเสียชีวิตหลังจากพบไวรัสตัวต่อไป!
+	<br>
+สิ่งที่คาดการณ์ไว้สำหรับหนูตะเภามนุษย์ที่ถูกฉีดทั้งหมด!
+	<br>
+ภาวะมีบุตรยากยังเป็นความแน่นอน
+
+</span>
+<p>
+	
+	
 หากคาดว่าผู้ที่ได้รับการฉีดจำนวนมากดังกล่าวจะเสียชีวิตหรือได้รับผลกระทบด้านสุขภาพอย่างรุนแรงจากการฉีดยาเหล่านี้ เหตุใดรัฐบาลจึงยังคงยืนยันที่จะบังคับให้ฉีดยาเหล่านี้กับประชากรของตน โดยการทำให้กลัว และในเชิงบีบบังคับ?
 <br>
 การฉีดสาร mRNAชนิดนี้ และอื่น ๆ เป็นการสร้างโปรแกรมใหม่ให้ร่างกายให้ผลิต Spike Protein ทำให้เกิดความเสียหายอย่างรุนแรงต่อหลอดเลือด  และทำให้ผู้คนเสียชีวิตในเวลาต่อมา ส่วนใหญ่จะเกิดชัดเมื่อร่างกายได้รับเชื้อไวรัสตัวใหม่แล้วไม่สามารถสร้างภูมิคุ้มกันโดยธรรมชาติอย่างปกติด้วยตัวมันเองอีกต่อไป
