--- a/index.html
+++ b/index.html
@@ -38,8 +38,87 @@
 <li>มีทางเลือกอื่นหรือไม่?
 <li>สิ่งที่จำเป็นต้องดำเนินการทันทีในขณะนี้
 </ul>
-<!-- ++++++++++++++++++++++++++++ Start Death Statistics ++++++++++++++++++++++ -->
 
+
+<!-- ++++++++++++++++++++++++++++++ Start Synopsys ++++++++++++++++++++++++ -->
+<h1>Synopsys ของการระบาดใหญ่ Covid-19!</h1>
+
+<br><br>
+
+<p>สิ่งที่แพทย์ที่มีชื่อเสียงและเป็นที่เคารพ  นักวิทยาศาสตร์และนักไวรัสวิทยาพูดถึงการระบาดใหญ่ Covid-19 นี้:</p>
+<table>
+<tr>
+<td width="50%">
+♦ Professor Dr. Sucharit Bhakdi 
+<br>
+&nbsp;&nbsp;&nbsp;(ศาสตราจารย์จากประเทศไทยที่สอนจุลชีววิทยาในมหาวิทยาลัยเยอรมัน)
+<br>
+♦ Professor Dr. Dolores Cahill
+<br>
+♦ Dr. Sherry Tenpenny
+<br>
+♦ ดร. Mike Yeadon 
+<br>
+&nbsp;&nbsp;&nbsp;(20 ปีที่ทำงานให้กับ Pfizer ในตำแหน่งหัวหน้านักวิทยาศาสตร์และรองประธานของ PFIZER)
+<br>
+
+</td><td width="50%">
+♦ ดร. Reiner Fuellmich 
+<br>
+&nbsp;&nbsp;&nbsp;(ทนายความ ผู้เตรียมการฟ้องร้องต่อต้านผู้กระทำความผิดที่กระทำการแหกกฏนูเรมเบิร์ก 2)
+<br>
+♦ ดร. แคร์รี่มาสจ์
+<br>
+♦ ดร. Luc Montagnier 
+<br>
+&nbsp;&nbsp;&nbsp;(ผู้ชนะรางวัลโนเบล)
+</td></tr></table>
+<ul>
+<li>
+ไม่มีการระบาดใหญ่ ไวรัสนี้ไม่ได้ทำให้เกิดการตายมากไปกว่าไข้หวัดอื่นๆ ที่เกิดขึ้นประจำปีในทุกๆปี
+<br>
+ผู้คนไม่ตายจากไวรัส Sars-Cov-2 แต่จากสาเหตุอื่น ๆ !
+<br>
+ผู้เสียชีวิตทุกคนจากการติดเชื้อ ถูกจัดอยู่ในประเภทที่เสียชีวิตจาก Sars-Cov-2 แม้ว่าในความเป็นจริงพวกเขาเสียชีวิตจากสาเหตุอื่น
+<li>
+ไม่จำเป็นต้องมีมาตรการใด ๆ  ข้อห้ามและมาตรการต่างๆทั้งหมด ไม่มีประโยชน์ และเป็นการทำลายล้างชิวิตผู้คน
+<br>
+การล๊อคดาวน์ เป็นการทำลายการทำมาหากินของผู้คนโดยไม่จำเป็น  แต่เพื่อบรรลุเป้าหมายที่ตรงกันข้าม
+<br>
+การสวมมาสก์ไม่ได้ป้องกันไวรัส  แต่หากเป็นอันตรายต่อสุขภาพของคุณเป็นอย่างมาก โดยเฉพาะหากสวมใส่นานมากกว่าครึ่งชั่วโมง
+<br>
+การรักษาระยะห่างทางสังคม ในความเป็นจริงไม่ได้เป็นสิ่งจำเป็นเลย สังคมที่เคยอยู่กันยังไงก็คงอยู่กันได้ปกติเช่นนั้น มาตรการเป็นเพียงสิ่งกล่าวอ้างให้เราเกิดความหวาดกลัวต่อเชื้อหวัดชนิดนี้มากขึ้นเท่านั้น การติดต่อของไข้หวัดชนิดใดๆก็เป็นเช่นนั้นให้พึงระลึกไว้ว่าควรปฏิบัติตนอย่างไรก็เพียงพอ
+<li>
+การทดสอบ PCR ที่ใช้ในการระบุว่าคนที่ติดเชื้อ SARS-COV-2 เป็นเทคนิคที่ฉ้อโกงทั้งหมดหรือไม่
+<br>
+การทดสอบนี้ไม่สามารถใช้เพื่อจุดประสงค์นี้ได้เลย  เพราะหากร่างกายเคยมีประสบการณ์เกิดการติดเชื้อไวรัสใดๆมาก่อน จะให้ผลลัพธ์ที่เป็นบวกที่ผิดพลาดมากถึง 100% ( เพราะหลักการการทดสอบนี้เมื่อรอบสูงกว่า 25 รอบ จะทำให้เกิดค่าบวกที่ผิดพลาดทั้งหมดได้ทันที แต่การทดสอบ PCR ต่อเชื้อนี้ใช้ที่ 35 ถึง 40 รอบ!)
+<li>
+ไม่จำเป็นต้องใช้ 'วัคซีน' เนื่องจากไม่มีการระบาดใหญ่หรือไวรัสอันตรายที่จะสามารถสามารถฆ่าคนที่มีสุขภาพดีได้
+<br>
+อัตราการรอดชีวิตคือ 99.9%  เฉพาะคนอ่อนแอมีโรคประจำตัวอยู่แล้ว หรือผู้สูงอายุเท่านั้นที่ต้องระวัง เพราะคนเหล่านี้มีโอกาสตายจากการติดเชื้อไวรัสโควิดเช่นเดียวกับไวรัสหวัดอื่นๆเช่นไข้หวัดใหญ่ประจำปีเช่นกัน
+<li>
+สารที่ปรับแต่งที่เรียกว่าวัคซีนเหล่านี้ไม่ใช่วัคซีน แต่เป็นการปรับแต่งยีนส์หรือโปรตีนที่ร้ายแรง  เมื่อเข้าสู่ร่างกาย ร่างกายจะมีการสร้างแอนติบอดี้ที่มาต่อต้าน และส่งผลให้ต่อมามีการจดจำ ร่างกายจะต่อต้านรุนแรงเหมือนพายุตามมาหากมีการติดเชื้อไวรัสครั้งต่อไป จะเกิดการทำลายเซลและอวัยวะต่างๆของตัวเองจนเสียชีวิต
+<li>
+การฉีดวัคซีนครั้งนี้ เป็นการแนะนำโปรตีนใหม่ซึ่งเป็นเชื้อโรคที่เกิดขึ้นจริงสู่ร่างกายตนเองโดยไม่จำเป็น เป็นความเสี่ยงที่ไม่จำเป็น และเป็นเสมือนการยินยอมให้ศัตรูเข้าสู่บ้านของตนเองแล้วส่งผลให้เกิดความหายนะต่อชีวิตตัวเอง และคนที่อยู่รอบข้างเราอย่างไม่จำเป็นเช่นกัน
+<li>
+•ทุกอย่างเสมือนการจัดฉากและทุกสิ่งที่คุณได้ยินเกี่ยวกับการระบาดใหญ่นี้จากรัฐบาล เป็นการหลอกลวงทั้งหมด จากWHO, CDC ,สำนักข่าวต่างๆทั้งหลาย เพื่ออะไร นี่คือคำถามเพราะเหตุผลที่ไม่มีใครคาดถึง!!
+<li>
+ให้สิ่งนั้นไม่จำเป็นต้องฉีดวัคซีนให้ทุกคนและความจริงที่ว่าการฉีดเหล่านี้มีอันตรายอย่างยิ่งและฆ่าคนจำนวนมากแล้ว แต่รัฐบาลกำลังผลักดันให้ทุกคนเข้าร่วมกับการปรุงเหล่านี้ได้ข้อสรุปแพทย์เหล่านี้ทั้งหมดได้ นั่นคือนี่เป็นวาระการผจญภัยที่วางแผนมายาวนานโดย Psychopaths ที่ควบคุมทุกอย่างในโลกนี้
+<br><br>
+
+	<span style="float: right; width: 100px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;">
+<a href="georgia-guidestones.jpg"><img src="georgia-guidestones.jpg" width="100px" class="z"></a>
+</span>
+
+
+
+แผนการที่ตั้งไว้ในการลดประชากรโลก 7 พันล้านคน และให้เหลือเพียง 500 ล้านคน ดังที่มีการบันทึกประกาศให้เราได้อ่านที่แท่นหินลึกลับที่เรียกกันว่า  Georgia Guide Stones!
+</ul>
+<p>อ่านหลักฐานทั้งหมดด้านล่างหากคุณไม่แน่ใจว่าแพทย์ที่มีชื่อเสียงเหล่านี้ถูกต้องหรือไม่!</p>
+
+<!-- ++++++++++++++++++++++++++++++End Synopsys +++++++++++++++++++++++++ -->
+<br>
+<!-- ++++++++++++++++++++++++++++ Start Death Statistics ++++++++++++++++++++++ -->
 	</p>
 	<span style="float: right; width: 300px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;">
 <a href="lethal-vaxx-may.jpg"><img class="z"   src="lethal-vaxx-may.jpg" style="width:300px; "></a>
@@ -54,8 +133,9 @@
 
 
 <!-- ++++++++++++++++++++++++++++ End Death Statistics ++++++++++++++++++++++ -->
+
 <p>
-หลักการนูเรมเบิร์กมีข้อห้ามที่ชัดเจน คือ ห้ามการทดลองทางการแพทย์กับผู้คนโดยไม่ได้รับความยินยอมจากพวกเขา และความเสี่ยงไม่ควรมาก่อนผลดีที่ผู้คนจะได้รับ
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>♦ หลักการนูเรมเบิร์กมีข้อห้ามที่ชัดเจน </b>คือ ห้ามการทดลองทางการแพทย์กับผู้คนโดยไม่ได้รับความยินยอมจากพวกเขา และความเสี่ยงไม่ควรมาก่อนผลดีที่ผู้คนจะได้รับ
 <br>
 โครงการปัจจุบันของรัฐบาลไทยคือทำการฉีดสารที่มีสารยีน – ดัดแปลงพันธุกรรม สู่ประชาชน เป็นการละเมิดหลักการของนูเรมเบิร์กทั้งหมดอย่างชัดเจน
 <br>
@@ -63,6 +143,8 @@
 <br>
 ดังนั้นการฉีดสารเหล่านี้จึงถือเป็นการทดลองทางคลินิกที่ผิดศีลธรรม และผิดกฎหมายกับประชากรทั้งหมด
 </p><br><br>
+	 
+	 
 <ul>
 <li>ยิ่งไปกว่านั้นผู้คนไม่ได้รับข้อมูลทั้งหมด เกี่ยวกับการฉีดสารเหล่านี้
 <li>ไม่มีการเปิดเผยข้อมูลอย่างสมบูรณ์เกี่ยวกับความเสี่ยงมหาศาลที่เกี่ยวข้องกับการฉีดสารที่สังเคราะห์มาจากการตัดต่อยีนพันธุกรรม
