--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 ♦ ดร. Luc Montagnier 
 <br>
 &nbsp;&nbsp;&nbsp;(ผู้ชนะรางวัลโนเบล)
+	<br><br>
+♦ และอื่น ๆ อีกมากมาย
 </td></tr></table>
 <ul>
 <li>
