--- a/eng.html
+++ b/eng.html
@@ -29,6 +29,93 @@ Re:
 <li>What immediate actions are required now
 </p></ul>
 
+<h1>Synopsys of the Covid-19 pandemic!</h1>
+<br>
+<br>
+<p>
+What the most eminent and respected doctors, scientist and virologist are saying about this Covid-19 pandemic:</p>
+<table>
+<tr>
+<td width="50%">
+
+<b>♦ Professor Dr. Dolores Cahill</b>
+<br>
+<b>♦ Dr. Sherry Tenpenny</b>
+<br>
+<b>♦ Dr. Mike Yeadon </b>
+<br>
+&nbsp;&nbsp;&nbsp;(20 years at Pfizer, chief scientist and Vice President of Pfizer)
+<br>
+<b>♦ Dr. Luc Montagnier </b>
+<br>
+&nbsp;&nbsp;&nbsp;(Nobel Prize winner)
+<br>
+</td>
+<td width="50%">
+<b>♦ Dr. Reiner Fuellmich </b>
+<br>
+&nbsp;&nbsp;&nbsp;(lawyer preparing lawsuits against the perpetrators and possibly a Nuremberg2)
+<br>
+<b>♦ Dr. Carrie Madej</b>
+<br>
+<b>♦ Professor Dr. Suchrit Bhakdi </b>
+<br>
+&nbsp;&nbsp;&nbsp;(Professor of Microbiology at German Universities)
+<br>
+<b>♦ And many more eminent Scientists, Doctors and Health Professionals!</b>
+</td></tr></table>
+<ul>
+<li>
+
+<i>
+"There is no pandemic; this virus is no more lethal than the annual flu.
+People are not dying from the SARS-CoV-2 virus but from other causes!
+Deceased people are all classified as having died from SARS-CoV-2 when in fact they died from other causes.
+<br><br>
+<li>There is no need for any destructive measures; they all are ineffective, useless and destructive.
+Lockdowns, which unnecessarily destroy people’s livelihood but achieve the exact opposite.
+Masks, which don’t protect form viruses  but are very dangerous to your health if worn for longer than half an hour.
+Social distancing, which is ineffective and silly.
+<br><br>
+<li>The PCR Test used to identify whether people are infected with SARS-CoV-2 is a total fraud.
+This test can not be used for this purpose and will give up to 100% false positive results above 25 cycles, but this PCR test is used at 35 to 40 cycles!
+<br><br>
+<li>There is no need for a ‘Vaccine’ since there is no pandemic or a dangerous Virus which could kill healthy people.
+Survival rate is 99.9% and only kills frail, elderly people who are about to die anyway just like the annual flu.
+<br><br>
+<li>These so called Vaccines are not vaccines but Gene-Mutilating concoctions!
+<br><br>
+<li>
+Even the manufacturers of these toxic concoctions admit that they 
+<br>
+• don’t protect anyone from contracting the virus, 
+<br>
+• protect your from you getting sick from the virus, 
+<br>
+• and you passing on this virus; 
+<br>
+they only spurious claim they make is that it <b>mitigates</b> the symptoms if you do contract the virus.
+
+<br><br>
+<li>All of these injections from all manufacturers introduce the Spike Protein <b>which is the actual pathogen and are extremely dangerous!</b>
+<br><br>
+<li>Everything is staged and everything you hear about this pandemic from governments, the WHO, the CDC, the media, everything is a lie!
+<br><br>
+<li>So given that there is no need to vaccinate anyone, these 'vaccines' don't actually are vaccines and protect anyone from anything, and the fact that these injections are extremely dangerous and have already killed huge numbers of people, yet all governments are pushing extremely hard to inject <b>everyone</b> with these concoctions, the conclusion all these Doctors have come to is that this is the <b>long planned ‘depopulation agenda’ by the psychopaths who control everything on this planet."</b>
+</i>
+</ul>
+
+	<span style="float: right; width: 100px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;">
+<a href="georgia-guidestones.jpg"><img src="georgia-guidestones.jpg" width="100px" class="z"></a>
+</span>
+
+<p>
+The plan evidently is to kill 7 Billion people and bring the number down to 500 million, as the Georgia Guide Stones contemptuously proclaimed!
+
+<br><br>
+Read all the evidence below if you are unsure whether all these eminent doctors are correct!</p>
+
+	 <br><br>
 <span style="float: right; width: 400px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 	<a href="lethal-vaxx-may.jpg"><img class="z" src="lethal-vaxx-may.jpg" style="width:400px; "></a>
 
