--- a/eng.html
+++ b/eng.html
@@ -40,6 +40,8 @@ What the most eminent and respected doctors, scientist and virologist are saying
 
 <b>♦ Professor Dr. Dolores Cahill</b>
 <br>
+&nbsp;&nbsp;&nbsp;Professor and scientist at many esteemed institutions as the Max-Planck-Institute in Germany, member and  chair of many advisory boards including to the EU!)
+<br>
 <b>♦ Dr. Sherry Tenpenny</b>
 <br>
 <b>♦ Dr. Mike Yeadon </b>
@@ -54,7 +56,7 @@ What the most eminent and respected doctors, scientist and virologist are saying
 <td width="50%">
 <b>♦ Dr. Reiner Fuellmich </b>
 <br>
-&nbsp;&nbsp;&nbsp;(lawyer preparing lawsuits against the perpetrators and possibly a Nuremberg2)
+&nbsp;&nbsp;&nbsp;(lawyer preparing lawsuits against the perpetrators and possibly a Nuremberg2 trial!)
 <br>
 <b>♦ Dr. Carrie Madej</b>
 <br>
@@ -70,29 +72,39 @@ What the most eminent and respected doctors, scientist and virologist are saying
 <i>
 "There is no pandemic; this virus is no more lethal than the annual flu.
 People are not dying from the SARS-CoV-2 virus but from other causes!
+
+<br>
 Deceased people are all classified as having died from SARS-CoV-2 when in fact they died from other causes.
+<br>
+</i>(WHO/CDC directive to all Governments to inflate the numbers of Covid-19 deaths; i.e.<b> lying!</b>)<i>
 <br><br>
 <li>There is no need for any destructive measures; they all are ineffective, useless and destructive.
-Lockdowns, which unnecessarily destroy people’s livelihood but achieve the exact opposite.
-Masks, which don’t protect form viruses  but are very dangerous to your health if worn for longer than half an hour.
-Social distancing, which is ineffective and silly.
+<br>
+► Lockdowns, which unnecessarily destroy people’s livelihood but achieve the exact opposite.
+<br></i>( Which evidently is the purpose of these Lockdowns; the destruction of People's Livelihood and income!)
+<i>
+<br>
+► Masks, which don’t protect form viruses  but are very dangerous to your health if worn for longer than half an hour.
+<br>
+► Social distancing, which is ineffective and silly.
 <br><br>
 <li>The PCR Test used to identify whether people are infected with SARS-CoV-2 is a total fraud.
-This test can not be used for this purpose and will give up to 100% false positive results above 25 cycles, but this PCR test is used at 35 to 40 cycles!
+<br>
+► This test can not be used for this purpose and will give up to 100% false positive results above 25 cycles, but this PCR test is used at 35 to 40 cycles!
 <br><br>
 <li>There is no need for a ‘Vaccine’ since there is no pandemic or a dangerous Virus which could kill healthy people.
-Survival rate is 99.9% and only kills frail, elderly people who are about to die anyway just like the annual flu.
+Survival rate is 99.9% and only kills frail, elderly people who are about to die regardless of their comorbidities, just like the annual flu.
 <br><br>
 <li>These so called Vaccines are not vaccines but Gene-Mutilating concoctions!
 <br><br>
 <li>
 Even the manufacturers of these toxic concoctions admit that they 
 <br>
-• don’t protect anyone from contracting the virus, 
+► don’t protect anyone from contracting the virus, 
 <br>
-• protect your from you getting sick from the virus, 
+► protect you from you getting sick from the virus, 
 <br>
-• and you passing on this virus; 
+► and you passing on this virus; 
 <br>
 they only spurious claim they make is that it <b>mitigates</b> the symptoms if you do contract the virus.
 
@@ -101,7 +113,7 @@ they only spurious claim they make is that it <b>mitigates</b> the symptoms if y
 <br><br>
 <li>Everything is staged and everything you hear about this pandemic from governments, the WHO, the CDC, the media, everything is a lie!
 <br><br>
-<li>So given that there is no need to vaccinate anyone, these 'vaccines' don't actually are vaccines and protect anyone from anything, and the fact that these injections are extremely dangerous and have already killed huge numbers of people, yet all governments are pushing extremely hard to inject <b>everyone</b> with these concoctions, the conclusion all these Doctors have come to is that this is the <b>long planned ‘depopulation agenda’ by the psychopaths who control everything on this planet."</b>
+<li>So given that there is no need to vaccinate anyone, these 'vaccines' don't actually are vaccines and protect anyone from anything, and the fact that these injections are extremely dangerous and have already killed huge numbers of people, yet all governments are pushing extremely hard to inject <b>everyone</b> with these concoctions, the conclusion all these Doctors have come to is that this is the <b>long planned ‘depopulation agenda’ by the psychopaths in power who control everything on this planet."</b>
 </i>
 </ul>
 
@@ -114,6 +126,10 @@ The plan evidently is to kill 7 Billion people and bring the number down to 500 
 
 <br><br>
 Read all the evidence below if you are unsure whether all these eminent doctors are correct!</p>
+
+
+
+<br><br>
 
 	 <br><br>
 <span style="float: right; width: 400px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
