--- a/eng.html
+++ b/eng.html
@@ -142,7 +142,7 @@ Official Deaths reported as of May 2021 from Covid-19 'vaccines'!
 </span>
 
 <p>
-The Nuremberg Principles explicitly forbid the medical experimentation on people without their <b>informed consent.</b>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	<b>The Nuremberg Principles</b> explicitly forbid the medical experimentation on people without their <b>informed consent.</b>
 <br>
 The present program by Governments globally of injecting people with experimental Gene-Altering compounds is in clear breach of all the <b>Nuremberg Principles.</b>
 <br>
