--- a/eng.html
+++ b/eng.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
-    <title>SARS-CoV-2</title>
+    <title>SARS-CoV-2 Genocide</title>
         <link media="screen" href="stylesheet.css" rel="stylesheet" type="text/css" />
   </head>
  <body>
@@ -21,19 +21,26 @@ Please share this vital information with everyone you love, it will save their l
 </h1>
 <p>
 Re:
-<ul><p>
+<ul>
 <li>SARS-CoV-2 Injections
 <li>Are they safe?
 <li>Are they legal?
 <li>Are there alternatives?
 <li>What immediate actions are required now
-</p></ul>
+</ul>
+
+
+<!-- ++=========================================== Start Synopsys ============================== ++ -->
+<table>
+<tr>
+<td class="a" bgcolor="#f0f0f0" style="padding:10px">
 
 <h1>Synopsys of the Covid-19 pandemic!</h1>
 <br>
 <br>
-<p>
-What the most eminent and respected doctors, scientist and virologist are saying about this Covid-19 pandemic:</p>
+
+What are the most eminent and respected doctors, scientist and virologist are saying about this Covid-19 pandemic:
+<br><br>
 <table>
 <tr>
 <td width="50%">
@@ -54,6 +61,10 @@ What the most eminent and respected doctors, scientist and virologist are saying
 <br>
 </td>
 <td width="50%">
+<b>♦ Dr. Vernon Coleman
+<br>
+
+</b>
 <b>♦ Dr. Reiner Fuellmich </b>
 <br>
 &nbsp;&nbsp;&nbsp;(lawyer preparing lawsuits against the perpetrators and possibly a Nuremberg2 trial!)
@@ -121,28 +132,38 @@ they only spurious claim they make is that it <b>mitigates</b> the symptoms if y
 <a href="georgia-guidestones.jpg"><img src="georgia-guidestones.jpg" width="100px" class="z"></a>
 </span>
 
-<p>
+
 The plan evidently is to kill 7 Billion people and bring the number down to 500 million, as the Georgia Guide Stones contemptuously proclaimed!
 
 <br><br>
-Read all the evidence below if you are unsure whether all these eminent doctors are correct!</p>
+Read all the evidence below if you are unsure whether all these eminent doctors are correct!
 
 
 
 <br><br>
 
-	 <br><br>
+<span style="float: left; width: 400px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<a href="us-uk-eu-fatalities.jpg"><img src="us-uk-eu-fatalities.jpg" width="400px"></a>
+<b><font color="#760000">17,511 killed as of May 2021!</font></b>
+<br>
+US, UK & EU Stats for fatalities and injuries caused by the Covid-19 jabs!
+</span>
+
 <span style="float: right; width: 400px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
 	<a href="lethal-vaxx-may.jpg"><img class="z" src="lethal-vaxx-may.jpg" style="width:400px; "></a>
 
 <b>EU only!</b><br>
 Official Deaths reported as of May 2021 from Covid-19 'vaccines'!
-	<br>
-	But Studies showed that <b>only 1%</b> of cases get recorded!!
+	<br><br>
+	<font color="#760000"><b>♦ But Studies showed that <b>only 1 to 10%</b> of cases get recorded!!</b></font>
 </span>
 
+</td>
+</tr>
+</table>
+
 <p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	<b>The Nuremberg Principles</b> explicitly forbid the medical experimentation on people without their <b>informed consent.</b>
+&nbsp;&nbsp;&nbsp;&nbsp;<b> ♦ The Nuremberg Principles</b> explicitly forbid the medical experimentation on people without their <b>informed consent.</b>
 <br>
 The present program by Governments globally of injecting people with experimental Gene-Altering compounds is in clear breach of all the <b>Nuremberg Principles.</b>
 <br>
@@ -262,7 +283,7 @@ This now implies that the <b>injected people</b> must be <b>isolated and kept aw
 </p>
 <table>
 <tr>
-<td class="a" bgcolor="#f0f0f0" style="padding:10px"> <p>
+<td class="a" bgcolor="#f0f0f0" style="padding:10px"> 
 Large numbers of highly qualified doctors, virologists and scientists all agree that by analysing these injections they have no other option than to conclude that these injections appear to be a deliberate program to kill huge numbers of people!
 <br><br>
 Thus it is beyond any doubt that this entire pandemic (plandemic) is a population reduction project which has been in the planning for a very long time;
@@ -280,7 +301,7 @@ It is the extinction event which has been planned by the eugenicist oligarchy fo
 Tried will be<b> every complicit government official, Bill Gates, Klaus Schwaab, Anthony Fauci, Tedros Adhanom, Deborah Birx, UN officials </b>and many more!
 <br><br>
 Be aware that there is the <b>Death Penalty</b> for these <b>Crimes against Humanity!</b>
-</p>
+
 </td></tr></table>
 <br><br><p>
 Yet there are safe and effective alternatives to treat and prevent SARS-CoV-2 and any so called mutation.
@@ -852,14 +873,14 @@ Brock Chishom:</b> first director of the World Health Organisation, <b>WHO</b>
 <br><br>
 <li>
 See more quotes below!
-<br><br></ul><p><h1>
+<br><br></ul></p><h1>
 ✘ Then there are other means with which this evil Cabal is culling Humanity:
 </h1>
 
 
 <span style="float: right; width: 180px; margin-left: 10px; margin-bottom: 0px; margin-right: 20px;  text-align: left;"> 
 <iframe width="178" height="101" src="https://www.youtube.com/embed/0fQ0vYvlI20" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-BRACE FOR IMPACT: "About to get much worse."
+</p></p>BRACE FOR IMPACT: "About to get much worse."
 </span>
 <ul>
 The entire global supply chain for every kinds of goods and food is systematically being dismantled and destroyed to create a massive global famine to wipe out billions of people!
@@ -993,6 +1014,11 @@ The real enemy, then, is humanity itself.”
 <br></i>
 <b>Christine Steward, Canadian Minister of the Environment</b>
 <h2 id="2"></h2>
+<br><br><br><br>
+
+
+	
+	<!-- ++++++++++++++++==================== END Copy Body Text =====================++++++++++++++++++ -->
 <br><br><br><br>
 
 	  
