--- a/eng.html
+++ b/eng.html
@@ -30,16 +30,16 @@ Re:
 </ul>
 
 
-<!-- ++=========================================== Start Synopsys ============================== ++ -->
+<!-- ++++++++++++++++++==================== START Synopsys ====================+++++++++++++++++ -->
 <table>
 <tr>
 <td class="a" bgcolor="#f0f0f0" style="padding:10px">
 
-<h1>Synopsys of the Covid-19 pandemic!</h1>
+<h1>Brief Synopsys of the Covid-19 pandemic!</h1>
 <br>
 <br>
 
-What are the most eminent and respected doctors, scientist and virologist are saying about this Covid-19 pandemic:
+What are the most eminent and respected doctors, scientist and virologist saying about this Covid-19 pandemic:
 <br><br>
 <table>
 <tr>
@@ -91,17 +91,17 @@ Deceased people are all classified as having died from SARS-CoV-2 when in fact t
 <br><br>
 <li>There is no need for any destructive measures; they all are ineffective, useless and destructive.
 <br>
-► Lockdowns, which unnecessarily destroy people’s livelihood but achieve the exact opposite.
+■ Lockdowns, which unnecessarily destroy people’s livelihood but achieve the exact opposite.
 <br></i>( Which evidently is the purpose of these Lockdowns; the destruction of People's Livelihood and income!)
 <i>
 <br>
-► Masks, which don’t protect form viruses  but are very dangerous to your health if worn for longer than half an hour.
+■ Masks, which don’t protect form viruses  but are very dangerous to your health if worn for longer than half an hour.
 <br>
-► Social distancing, which is ineffective and silly.
+■ Social distancing, which is ineffective and silly.
 <br><br>
 <li>The PCR Test used to identify whether people are infected with SARS-CoV-2 is a total fraud.
 <br>
-► This test can not be used for this purpose and will give up to 100% false positive results above 25 cycles, but this PCR test is used at 35 to 40 cycles!
+■ This test can not be used for this purpose and will give up to 100% false positive results above 25 cycles, but this PCR test is used at 35 to 40 cycles!
 <br><br>
 <li>There is no need for a ‘Vaccine’ since there is no pandemic or a dangerous Virus which could kill healthy people.
 Survival rate is 99.9% and only kills frail, elderly people who are about to die regardless of their comorbidities, just like the annual flu.
@@ -111,11 +111,11 @@ Survival rate is 99.9% and only kills frail, elderly people who are about to die
 <li>
 Even the manufacturers of these toxic concoctions admit that they 
 <br>
-► don’t protect anyone from contracting the virus, 
+■ don’t protect anyone from contracting the virus, 
 <br>
-► protect you from you getting sick from the virus, 
+■ protect you from you getting sick from the virus, 
 <br>
-► and you passing on this virus; 
+■ and you passing on this virus; 
 <br>
 they only spurious claim they make is that it <b>mitigates</b> the symptoms if you do contract the virus.
 
@@ -161,7 +161,7 @@ Official Deaths reported as of May 2021 from Covid-19 'vaccines'!
 </td>
 </tr>
 </table>
-
+<!-- ++++++++++++++++++==================== END Synopsys ====================+++++++++++++++++ -->
 <p>
 &nbsp;&nbsp;&nbsp;&nbsp;<b> ♦ The Nuremberg Principles</b> explicitly forbid the medical experimentation on people without their <b>informed consent.</b>
 <br>
