--- a/index.html
+++ b/index.html
@@ -23,12 +23,26 @@
           <!-- ============================== Start Page Break ============================================================== -->
      <img src="2x1.jpg" width="100%" height="1px">
       <!-- ============================== End Page Break ============================== -->
+<br><br>
+	 <span style="float: left; width: 150px; margin-left: 10px; margin-bottom: 10px; margin-right: 20px; text-align: left;"> 
+<img src="alert.gif" width="150px">
+</span>
+<h1><font color="#760000"><b>แพทย์ และนักวิทยาศาสตร์หลายพันคน กำลังแจ้งข้อมูลที่เป็นลายลักษณ์อักษร ถึงรัฐบาลทุกๆแห่งทั่วโลก สำหรับการระงับการวัคซีนทั้งหมด  เนื่องจากเกิดการเสียชีวิตจำนวนมาก  และเกิดผลข้างเคียงที่ร้ายแรงต่อสุขภาพมากมายตามมา</b></font></h1>
+<br><br>
 <table>
 <tr>
 <td class="a" bgcolor="#f0f0f0" style="padding:10px">
 <h1>
 โปรดแบ่งปันข้อมูลสำคัญนี้กับทุกคนที่คุณรัก ข้อมูลนี้จะช่วยชีวิตพวกเขาได้!</h1>
 </td></tr></table>
+
+
+
+
+
+
+
+<br><br>
           <!-- ============================== Start **** ============================================================== -->
 <p><b>เรื่อง</b></p>
 <ul><p>
