--- a/index.html
+++ b/index.html
@@ -54,12 +54,18 @@
 </ul>
 
 
+
 <!-- ++++++++++++++++++++++++++++++ Start Synopsys ++++++++++++++++++++++++ -->
+<table cellpadding="10px">
+<tr  style=“overflow:auto”>
+              <td colspan="3" class="a" bgcolor="#ffece4"> 
+
 <h1>Synopsys ของการระบาดใหญ่ Covid-19!</h1>
 
 <br><br>
 
-<p>สิ่งที่แพทย์ที่มีชื่อเสียงและเป็นที่เคารพ  นักวิทยาศาสตร์และนักไวรัสวิทยาพูดถึงการระบาดใหญ่ Covid-19 นี้:</p>
+สิ่งที่แพทย์ที่มีชื่อเสียงและเป็นที่เคารพ  นักวิทยาศาสตร์และนักไวรัสวิทยาพูดถึงการระบาดใหญ่ Covid-19 นี้:
+<br><br>
 <table>
 <tr>
 <td width="50%">
@@ -86,7 +92,7 @@
 ♦ ดร. Luc Montagnier 
 <br>
 &nbsp;&nbsp;&nbsp;(ผู้ชนะรางวัลโนเบล)
-	<br><br>
+<br><br>
 ♦ และอื่น ๆ อีกมากมาย
 </td></tr></table>
 <ul>
@@ -130,7 +136,8 @@
 
 แผนการที่ตั้งไว้ในการลดประชากรโลก 7 พันล้านคน และให้เหลือเพียง 500 ล้านคน ดังที่มีการบันทึกประกาศให้เราได้อ่านที่แท่นหินลึกลับที่เรียกกันว่า  Georgia Guide Stones!
 </ul>
-<p>อ่านหลักฐานทั้งหมดด้านล่างหากคุณไม่แน่ใจว่าแพทย์ที่มีชื่อเสียงเหล่านี้ถูกต้องหรือไม่!</p>
+อ่านหลักฐานทั้งหมดด้านล่างหากคุณไม่แน่ใจว่าแพทย์ที่มีชื่อเสียงเหล่านี้ถูกต้องหรือไม่!>
+</td></tr></table>
 
 <!-- ++++++++++++++++++++++++++++++End Synopsys +++++++++++++++++++++++++ -->
 <br>
