--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 แผนการที่ตั้งไว้ในการลดประชากรโลก 7 พันล้านคน และให้เหลือเพียง 500 ล้านคน ดังที่มีการบันทึกประกาศให้เราได้อ่านที่แท่นหินลึกลับที่เรียกกันว่า  Georgia Guide Stones!
 </ul>
-อ่านหลักฐานทั้งหมดด้านล่างหากคุณไม่แน่ใจว่าแพทย์ที่มีชื่อเสียงเหล่านี้ถูกต้องหรือไม่!>
+อ่านหลักฐานทั้งหมดด้านล่างหากคุณไม่แน่ใจว่าแพทย์ที่มีชื่อเสียงเหล่านี้ถูกต้องหรือไม่!
 </td></tr></table>
 
 <!-- ++++++++++++++++++++++++++++++End Synopsys +++++++++++++++++++++++++ -->
