--- a/index.html
+++ b/index.html
@@ -3,22 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>SARS-CoV-2</title>
-<p4	{ text-shadow:	0 2px 0 #999, 
-			0 3px 0 #888, 
-			0 4px 0 #777, 
-			0 5px 0 #555, 
-			0 6px 0 #333, 
-			/*0 7px 0 #444, 
-			0 8px 0 #333, */
-			0 7px 5px #302314; 
-			font-size:2em; 
-			color:#d27d01; 
-			font-weight: 600;}			
-img.s {
-            filter: drop-shadow(5px 5px 5px #222);
-            
-           
-        }>
+
+        <link media="screen" href="stylesheet.css" rel="stylesheet" type="text/css" />
   </head>
  <body>
 
